{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 235,
  "lineage": "848ddedc-bf79-2e4e-492a-8b9f96c7b6fb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elasticIP_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb6ecace90058c0c",
            "arn": "arn:aws:ec2:us-east-1:853931633827:elastic-ip/eipalloc-0eb6ecace90058c0c",
            "domain": "vpc",
            "id": "eipalloc-0eb6ecace90058c0c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-170-157-112.compute-1.amazonaws.com",
            "public_ip": "35.170.157.112",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elasticIP_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-037405d09c9098902",
            "arn": "arn:aws:ec2:us-east-1:853931633827:elastic-ip/eipalloc-037405d09c9098902",
            "domain": "vpc",
            "id": "eipalloc-037405d09c9098902",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-193-107-38.compute-1.amazonaws.com",
            "public_ip": "34.193.107.38",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853931633827:internet-gateway/igw-00b5cca140660ac68",
            "id": "igw-00b5cca140660ac68",
            "owner_id": "853931633827",
            "tags": {
              "Name": "terraform_vpc_demo-dev-igw"
            },
            "tags_all": {
              "Name": "terraform_vpc_demo-dev-igw"
            },
            "vpc_id": "vpc-0ec29c4e781eb4181"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb6ecace90058c0c",
            "association_id": "eipassoc-0d806a67720fb1c67",
            "connectivity_type": "public",
            "id": "nat-0434161a1d6e7bdb8",
            "network_interface_id": "eni-034b174fb6b646f38",
            "private_ip": "10.0.101.150",
            "public_ip": "35.170.157.112",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c77db5e05b4a795b",
            "tags": {
              "Name": "gw NAT one"
            },
            "tags_all": {
              "Name": "gw NAT one"
            }
          },
          "dependencies": [
            "aws_eip.elasticIP_one",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-037405d09c9098902",
            "association_id": "eipassoc-02c245cafff30fb9d",
            "connectivity_type": "public",
            "id": "nat-048b9737d46488ae5",
            "network_interface_id": "eni-0a477153c9e1ec1aa",
            "private_ip": "10.0.102.252",
            "public_ip": "34.193.107.38",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c36c6805a2805f4a",
            "tags": {
              "Name": "gw NAT two"
            },
            "tags_all": {
              "Name": "gw NAT two"
            }
          },
          "dependencies": [
            "aws_eip.elasticIP_two",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853931633827:route-table/rtb-0426c12a6afd8790f",
            "id": "rtb-0426c12a6afd8790f",
            "owner_id": "853931633827",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.1.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0434161a1d6e7bdb8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_vpc_demo-dev-private-rt-1"
            },
            "tags_all": {
              "Name": "terraform_vpc_demo-dev-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec29c4e781eb4181"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elasticIP_one",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway_subnet1",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853931633827:route-table/rtb-01bb0e0f52b2249be",
            "id": "rtb-01bb0e0f52b2249be",
            "owner_id": "853931633827",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.2.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-048b9737d46488ae5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_vpc_demo-dev-private-rt-2"
            },
            "tags_all": {
              "Name": "terraform_vpc_demo-dev-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec29c4e781eb4181"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elasticIP_two",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway_subnet2",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853931633827:route-table/rtb-04b70dac1881be615",
            "id": "rtb-04b70dac1881be615",
            "owner_id": "853931633827",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00b5cca140660ac68",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_vpc_demo-dev-public-rt"
            },
            "tags_all": {
              "Name": "terraform_vpc_demo-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec29c4e781eb4181"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_az1_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066f31391d24fb88b",
            "route_table_id": "rtb-0426c12a6afd8790f",
            "subnet_id": "subnet-0ddde1dff6c80c5d5"
          },
          "dependencies": [
            "aws_eip.elasticIP_one",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway_subnet1",
            "aws_route_table.private_route_table_1",
            "aws_subnet.private_subnet_az1",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_az2_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd0b65e9fda9654f",
            "route_table_id": "rtb-01bb0e0f52b2249be",
            "subnet_id": "subnet-04b0b8d8c97c44b49"
          },
          "dependencies": [
            "aws_eip.elasticIP_two",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway_subnet2",
            "aws_route_table.private_route_table_2",
            "aws_subnet.private_subnet_az2",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023fe2033d54d56ab",
            "route_table_id": "rtb-04b70dac1881be615",
            "subnet_id": "subnet-0c36c6805a2805f4a"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az1_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf990a6597ac7f70",
            "route_table_id": "rtb-04b70dac1881be615",
            "subnet_id": "subnet-0c77db5e05b4a795b"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853931633827:security-group/sg-0921f74d9c9b09d59",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0921f74d9c9b09d59",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "https only",
            "name_prefix": "",
            "owner_id": "853931633827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_vpc_demo-dev-security-group"
            },
            "tags_all": {
              "Name": "terraform_vpc_demo-dev-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec29c4e781eb4181"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853931633827:subnet/subnet-0ddde1dff6c80c5d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddde1dff6c80c5d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "853931633827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_vpc_demo-dev-private-az1"
            },
            "tags_all": {
              "Name": "terraform_vpc_demo-dev-private-az1"
            },
            "vpc_id": "vpc-0ec29c4e781eb4181"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853931633827:subnet/subnet-04b0b8d8c97c44b49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b0b8d8c97c44b49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "853931633827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_vpc_demo-dev-private-az2"
            },
            "tags_all": {
              "Name": "terraform_vpc_demo-dev-private-az2"
            },
            "vpc_id": "vpc-0ec29c4e781eb4181"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853931633827:subnet/subnet-0c77db5e05b4a795b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c77db5e05b4a795b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "853931633827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_vpc_demo-dev-public-az1"
            },
            "tags_all": {
              "Name": "terraform_vpc_demo-dev-public-az1"
            },
            "vpc_id": "vpc-0ec29c4e781eb4181"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853931633827:subnet/subnet-0c36c6805a2805f4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c36c6805a2805f4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "853931633827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_vpc_demo-dev-public-az2"
            },
            "tags_all": {
              "Name": "terraform_vpc_demo-dev-public-az2"
            },
            "vpc_id": "vpc-0ec29c4e781eb4181"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853931633827:vpc/vpc-0ec29c4e781eb4181",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-025adce23c690ee05",
            "default_route_table_id": "rtb-06777170b83b661cc",
            "default_security_group_id": "sg-01ff8f983c19e521b",
            "dhcp_options_id": "dopt-0ec520b5a180ff95a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec29c4e781eb4181",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06777170b83b661cc",
            "owner_id": "853931633827",
            "tags": {
              "Name": "terraform_vpc_demo-dev-vpc"
            },
            "tags_all": {
              "Name": "terraform_vpc_demo-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}